# AgentDock

./: README.md  README_CN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: release-github.sh
src/: App.css  App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  files.rs  lib.rs  main.rs  mapping.rs  paths.rs  sync.rs  types.rs  workspace.rs
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  index.ts  tabs.tsx  textarea.tsx
src/features/prompt-sync/: index.ts
src/features/prompt-sync/components/: BackupDropdown.tsx  BackupPanel.tsx  DiffViewer.tsx  FileEditor.tsx  PromptEditors.tsx  PromptSyncLayout.tsx  SourceFileList.tsx  SyncPreviewPanel.tsx  ui.tsx
src/features/prompt-sync/hooks/: useBackups.ts  useFileEditor.ts  usePromptEditors.ts  useSourceFiles.ts  useSyncPreview.ts  useWorkspace.ts
src/features/prompt-sync/utils/: constants.ts
