[package]
name = "agentdock"
version = "0.1.0"
description = "AgentDock"
authors = ["Zane"]
edition = "2021"

[lib]
name = "agentdock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
